  constraints which implies these (lazy) bounds. If the lazy lower or upper bound is greater or less than the local lower or upper bound, 
  respectively, then the corresponding bound is not put into the LP. The bounds are set to minus and plus infinity per default which yields 
  the same behavior as before. With the methods SCIPchgVarLbLazy() and SCIPchgVarUbLazy() these bounds can be set. 
  This is of interest if SCIP gets used as a  branch-and-price framework.
- added new timing point, SCIP_HEURTIMING_DURINGPRICINGLOOP, for calling heuristics; If this timing point is used the corresponding 
  heuristics is called during the pricing loop of variables; we also added this timing point to heur_simplerounding.{h,c} which
  has the effect that a LP solution which satisfies all integrality conditions during the pricing loop is detected
- extended hybrid relpscost branching rule by usage of the average length of conflicts a variable appears in
- one can now write indicator constraints in LP-format
- now it's possible to write strings with more than "SCIP_MAXSTRLEN" amount of characters in all message.c functions
- the current/root lp can be marked to be no relaxation of the current/root problem
- "early branching"-functionality added: in a branch-and-price code, the user can stop pricing at a node although there may exist variables 
  with negative reduced costs. In this case, the lp-lowerbound will not be used. The pricer has, however, the option to return a lower bound.
- the infrastructure for parsing CIP format is set; each constraint handler has now an callback method SCIP_DECL_CONSPARSE() (see type_cons.h)
- the infrastructure for copying constraints is set; each constraint handler has now an callback method SCIP_DECL_CONSCOPYE() (see type_cons.h)
- all linear type constraint handlers are able to copy constraints using the function SCIPcopyCons() in scip.h