@@ -985,9 +985,6 @@
  * the pricer has to add the variable to all constraints in which it appears. Therefore, a pricer needs to
  * know the constraints of the model and their meaning. Note that all constraints for which additional variables
  * are generated by a pricer have to be flagged as "modifiable" in the SCIPcreateCons() call.
- * Note that if the original problem is a maximization problem, SCIP transformed the problem into a minimization 
- * problem by multiplying the objective function by -1. The pricer has to consider this and thus, the original 
- * objective function value of all variables created during the solving process should also be multiplied by -1.
  *
  * In the following, we explain how the user can add an own pricer.
  * For example, look into the stable set pricer for the coloring problem (examples/Coloring/src/pricer_coloring.c) of the
@@ -1121,9 +1118,6 @@
  * there might exist additional variables with negative dual feasibility, the result pointer should be set to SCIP_DIDNOTRUN.
  * In this case, which sometimes is referred to as "early branching", the lp solution will not be used as a lower bound. 
  * The pricer can, however, store a valid lower bound in the lowerbound pointer.
- * If you use your own branching rule (e.g., to branch on constraints), make sure that it is able to branch on pseudo solutions. 
- * Otherwise, SCIP will use its default branching rules (which all branch on variables). This
- * could disturb the pricing problem or branching might not even be possible, e.g., if all yet created variables have already been fixed.
  *
  * Pricers usually need the dual LP solution as input for the pricing algorithm.
  * Since SCIP does not know the semantics of the individual constraints in the problem, the dual solution
@@ -1217,6 +1211,23 @@
  *
  * The PRICEREXITSOL callback is executed before the branch and bound process is freed.
  * The pricer should use this call to clean up its branch and bound data, which was allocated in PRICERINITSOL.
+ *
+ * @section PRICER_REMARKS Further remarks
+ *
+ * If you use your own branching rule (e.g., to branch on constraints), make sure that it is able to branch on pseudo solutions. 
+ * Otherwise, SCIP will use its default branching rules, if necessary(which all branch on variables). This
+ * could disturb the pricing problem or branching might not even be possible, e.g., if all yet created variables have already been fixed.
+ *
+ * Note that if the original problem is a maximization problem, SCIP will transform the problem into a minimization 
+ * problem by multiplying the objective function by -1. The pricer has to consider this and thus, the original 
+ * objective function value of all variables created during the solving process should also be multiplied by -1.
+ *
+ * In some cases, bounds on variables are enforced by constraints of the problem. Therefore, these bounds do not need to be 
+ * added to the LP explicitly, which yields the advantage, that the pricing routine does not need to respect the corresponding dual values.
+ * We call these bounds lazy bounds, they may be set by SCIPchgVarLbLazy() and SCIPchgVarUbLazy() for upper or lower bounds, respectively.
+ * If the lazy bound is tighter than the local bound, the corresponding bound is not put into the LP.
+ * Attention: The lazy bounds need to be valid for each feasible LP solution. If the objective function implies bounds on the variables for 
+ * each optimal LP solution, but these bounds may be violated for arbitrary LP solutions, these bounds must not be declared lazy!
  */
 
 /*--+----1----+----2----+----3----+----4----+----5----+----6----+----7----+----8----+----9----+----0----+----1----+----2*/
